--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -795,6 +795,7 @@ dummy:
 #  - grafana-piechart-panel
 #grafana_allow_embedding: True
 #grafana_port: 3000
+#grafana_conf_overrides: {}
 #prometheus_container_image: "prom/prometheus:v2.7.2"
 #prometheus_container_cpu_period: 100000
 #prometheus_container_cpu_cores: 2
@@ -817,6 +818,7 @@ dummy:
 #alertmanager_conf_dir: /etc/alertmanager
 #alertmanager_port: 9093
 #alertmanager_cluster_port: 9094
+#alertmanager_conf_overrides: {}
 # igw
 #
 # `igw_network` variable is intended for allowing dashboard deployment with iSCSI node not residing in the same subnet than what is defined in `public_network`.
