move environment variables at play level
All ansible modules are using two common environment variables to
determine if the deployment is containerized or not.
Setting those variables on each module call makes a lot of duplicate
code and also useless when the deployment isn't containeried.
Instead we should set the evironment variables at play level and only
on containerized deployment.

Signed-off-by: Dimitri Savineau <dsavinea@redhat.com>

--- a/dashboard.yml
+++ b/dashboard.yml
@@ -89,6 +89,9 @@
 - hosts: "{{ groups[mgr_group_name] | default(groups[mon_group_name]) | default(omit) }}"
   gather_facts: false
   become: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry + '/' + ceph_docker_image + ':' + ceph_docker_image_tag if containerized_deployment | bool else None }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   pre_tasks:
     - name: set ceph dashboard install 'In Progress'
       run_once: true
