--- a/site-container.yml.sample
+++ b/site-container.yml.sample
@@ -20,6 +20,10 @@
   vars:
     delegate_facts_host: True
 
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
+
   pre_tasks:
     - import_tasks: raw_install_python.yml
 
@@ -83,6 +87,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     - import_role:
         name: ceph-defaults
@@ -118,6 +125,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for following imports -
     - name: set ceph manager install 'In Progress'
@@ -156,6 +166,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for upcoming imports -
     - name: set ceph osd install 'In Progress'
@@ -194,6 +207,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for following imports -
     - name: set ceph mds install 'In Progress'
@@ -232,6 +248,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for following imports -
     - name: set ceph rgw install 'In Progress'
@@ -270,6 +289,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tags: 'ceph_client'
   tasks:
     # pre-tasks for following imports -
@@ -309,6 +331,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for following imports -
     - name: set ceph nfs install 'In Progress'
@@ -347,6 +372,9 @@
   become: True
   gather_facts: false
   any_errors_fatal: true
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for following imports -
     - name: set ceph rbd mirror install 'In Progress'
@@ -386,6 +414,9 @@
   gather_facts: false
   any_errors_fatal: true
   become: True
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     # pre-tasks for following imports -
     - name: set ceph iscsi gateway install 'In Progress'
@@ -437,7 +468,9 @@
   gather_facts: false
   become: True
   any_errors_fatal: true
-
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+    CEPH_CONTAINER_BINARY: "{{ container_binary }}"
   tasks:
     - import_role:
         name: ceph-defaults
